Updated sentence in index.html
changed reference sentence

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <h1>Hello,</h1>
         <p>My name is Luke Pancrazi.</p>
         <p>I am a <span class="span-web">web developer</span> from Arizona.</p>
-        <a href="#">Check out some of my code</a>
+        <a href="#">Check out my code</a>
        </div>
     </main>
     <footer class="page-footer">
