Updated Links in index.html
Updated github and twitter links

--- a/index.html
+++ b/index.html
@@ -32,14 +32,18 @@
         <h1>Hello,</h1>
         <p>My name is Luke Pancrazi.</p>
         <p>I am a <span class="span-web">web developer</span> from Arizona.</p>
-        <a href="#">Check out my code</a>
+        <a href="https://github.com/Lukepancrazi9">Check out my code</a>
        </div>
     </main>
     <footer class="page-footer">
         <div class="social-media">
           <p>Find me on</p>
-          <img src="img/8666193_github_icon.svg" alt="Github">
-          <img src="img/11053970_x_logo_twitter_new_brand_icon.svg">
+          <a href="https://github.com/Lukepancrazi9" target="_blank">
+            <img src="img/8666193_github_icon.svg" alt="Github icon">
+          </a>
+          <a href="https://twitter.com/lukepancrazi9" target="_blank">
+            <img src="img/11053970_x_logo_twitter_new_brand_icon.svg" alt="X icon">
+          </a>
         </div>
     </footer>
     <script src="js/tota11y.min.js"></script>
