Updated footer to web pages
updated footer for icons and links

--- a/about.html
+++ b/about.html
@@ -1491,10 +1491,14 @@
     </div>
     <footer class="page-footer">
         <div class="social-media">
-          <p>Find me on</p>
-          <img src="img/8666193_github_icon.svg" alt="Github">
-          <img src="img/11053970_x_logo_twitter_new_brand_icon.svg">
-        </div>
+            <p>Find me on</p>
+            <a href="https://github.com/Lukepancrazi9" target="_blank">
+              <img src="img/8666193_github_icon.svg" alt="Github icon" class="footer-icon">
+            </a>
+            <a href="https://twitter.com/lukepancrazi9" target="_blank">
+              <img src="img/11053970_x_logo_twitter_new_brand_icon.svg" alt="X icon" class="footer-icon" >
+            </a>
+          </div>
     </footer>
 <script src="js/tota11y.min.js"></script>
 </body>
