--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
         <div class="social-media">
           <p>Find me on</p>
           <a href="https://github.com/Lukepancrazi9" target="_blank">
-            <img src="img/8666193_github_icon.svg" alt="Github icon">
+            <img src="img/8666193_github_icon.svg" alt="Github icon" class="footer-icon">
           </a>
           <a href="https://twitter.com/lukepancrazi9" target="_blank">
-            <img src="img/11053970_x_logo_twitter_new_brand_icon.svg" alt="X icon">
+            <img src="img/11053970_x_logo_twitter_new_brand_icon.svg" alt="X icon" class="footer-icon" >
           </a>
         </div>
     </footer>
