updated twitter link in body
added link to twitter profile

--- a/about.html
+++ b/about.html
@@ -35,7 +35,9 @@
                 career. I am excited learn and harden my skills as a web developer.
             </p>
             <p>Follow my progress here on my X (formerly Twitter) account:</p>
-            <img src="img/11053970_x_logo_twitter_new_brand_icon.svg">
+            <a href="https://twitter.com/lukepancrazi9">
+                <img src="img/11053970_x_logo_twitter_new_brand_icon.svg" alt="twitter icon">
+            </a>
         </div>
       <!-- <table class="about-page__item">
         <caption>School Education and Skills</caption>
