updated titles for each page
changed the titles for each specific web page

--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Gloock&family=Open+Sans&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/styles.css">
-    <title>Luke Pancrazi's Portfolio</title>
+    <title>About Luke Pancrazi</title>
 </head>
 <body>
     <header class="page-header">
