--- a/contact.html
+++ b/contact.html
@@ -26,40 +26,40 @@
   </nav>
 </header>
 
-    <main>
-      <div>
-        <h1>Contact</h1>
-
-        <a href="mailto:lukepancrazi@gmail.com">Contact me</a>
-        <br>
-        <a href="mailto:lukepancrazi@gmail.com">Email:lukepancrazi@gmail.com</a>
-        <br>
-        <a href="tel:+19284463196">Phone:+1 928-446-3196</a>
-        <br>
-        <a href="skype:lukepancrazi@gmail.com">Skype:lukepancrazi@gmail.com</a>
-      </div>
-      <div>
-        <h2>Contact Us</h2>
-
-        <form action="contact-message-form" id="contact-message-form">
-            <label for="name" class="standard-label">Name:</label>
-            <input type="name" id="name" name="name" required>
-          <br>
-            <label for="email" class="standard-label">Email:</label>
-            <input type="email" id="email" name="user_email" required>
-          <br>
-            <label for="tel" class="standard-label">Phone:</label>
-            <input type="tel" id="tel" name="user_tel" pattern="\d{3}[\-]\d{3}[\-]\d{4}">
-          <br>
-            <label for="message" class="standard-label">Message:</label>
-            <textarea maxlength="240" name="message" id="message"> </textarea>
-          <br>
-            <button type="submit">Submit</button>
-        </form>
+  <main>
+      <h1 class="contact-header">Contact</h1>
+      <div class="contact-page">
+          <div class="contact-page__item">
+              <h2>Luke Pancrazi</h2>
+              <a href="mailto:lukepancrazi@gmail.com">Contact me</a><br>
+              <br>
+              <a href="mailto:lukepancrazi@gmail.com">Email:lukepancrazi@gmail.com</a><br>
+              <br>
+              <a href="tel:+19284463196">Phone:+1 928-446-3196</a><br>
+              <br>
+              <a href="skype:lukepancrazi@gmail.com">Skype:lukepancrazi@gmail.com</a>
+          </div>
+          <div class="contact-page__item">
+            <h2>Message Me</h2>
+              <form action="contact-message-form" id="contact-message-form">
+                <label for="name" class="standard-label">Name:</label><br>
+                  <input type="name" id="name" name="name" required>
+                <br>
+                <label for="email" class="standard-label">Email:</label><br>
+                  <input type="email" id="email" name="user_email" required>
+                <br>
+                <label for="tel" class="standard-label">Phone:</label><br>
+                  <input type="tel" id="tel" name="user_tel" pattern="\d{3}[\-]\d{3}[\-]\d{4}">
+                <br>
+                <label for="message" class="standard-label">Message:</label><br>
+                  <textarea maxlength="240" name="message" cols="30" rows="5" id="message">Message...</textarea><br>
+                  <input type="submit" value="Send Message" class="button">
+              </form>
+          </div>
       </div>  
-    </main>
+  </main>
 
-    <footer class="page-footer">
+  <footer class="page-footer">
       <div class="social-media">
         <p>Find me on</p>
         <a href="https://github.com/Lukepancrazi9" target="_blank">
