--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="icon" type="image/png" href="img/favicon-96x96.png" sizes="96x96" />
+    <link rel="icon" type="image/png" href="img/favicon-96x96.png" sizes="96x96">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css.map">
@@ -43,7 +43,7 @@
             <h2>Message Me</h2>
               <form action="contact-message-form" id="contact-message-form">
                 <label for="name" class="standard-label">Name:</label><br>
-                  <input type="name" id="name" name="name" required>
+                  <input type="text" id="name" name="name" required>
                 <br>
                 <label for="email" class="standard-label">Email:</label><br>
                   <input type="email" id="email" name="user_email" required>
