--- a/index.html
+++ b/index.html
@@ -24,11 +24,12 @@
             
                 <a href="contact.html" role="menuitem" class="navigation-list__item">Contact</a>
       </nav>
+
     </header>
 
     <main>
       <div class="profile" >
-        <img src="img/lukes-portrait.jpeg" class="profile__portrait" alt="Luke Pancrazi Portrait">
+        <div class="profile__portrait"><img src="img/lukes-portrait.jpeg" class="profile__portrait" alt="Luke Pancrazi Portrait"></div>
         <h1>Hello,</h1>
         <p>My name is Luke Pancrazi.</p>
         <p>I am a <span class="span-web">web developer</span> from Arizona.</p>
