Updated styling for screen adjust
updated styling for media screen adjust

--- a/index.html
+++ b/index.html
@@ -24,17 +24,16 @@
             
                 <a href="contact.html" role="menuitem" class="navigation-list__item">Contact</a>
       </nav>
-
     </header>
 
     <main>
       <div class="profile" >
-        <div class="profile__portrait"><img src="img/lukes-portrait.jpeg" class="profile__portrait" alt="Luke Pancrazi Portrait"></div>
+        <img src="img/lukes-portrait.jpeg" class="profile__portrait" alt="Luke Pancrazi Portrait">
         <h1>Hello,</h1>
         <p>My name is Luke Pancrazi.</p>
         <p>I am a <span class="span-web">web developer</span> from Arizona.</p>
         <a href="https://github.com/Lukepancrazi9">Check out my code</a>
-       </div>
+      </div>  
     </main>
     <footer class="page-footer">
         <div class="social-media">
